[project]
name = "spike_encoder"
version = "0.1.0"
description = "A flexible library for neural encoding that transforms continuous signals into spike trains."

readme = "README.md"

requires-python = ">=3.9"

license = {text = "GPL-3-or-later"}

authors = [
    {name = "Ivan Raikov", email = "ivan.g.raikov@gmail.com"},
]

dependencies = [
    "numpy>=1.20.0",
    "scipy>=1.7.0",
    "matplotlib>=3.5.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "black>=23.0.0",
    "ruff>=0.0.270",
    "mypy>=1.0.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.pytest]
testpaths = ["tests"]

[tool.uv]
dev-dependencies = [
    "pre-commit>=4.1.0",
    "ruff==0.9.3",
]

[tool.hatch.metadata]
allow-direct-references = true

[tool.hatch.build.targets.wheel]
packages = ["dmosopt"]
